file view header work

--- a/partials/folder-view.html
+++ b/partials/folder-view.html
@@ -1,6 +1,6 @@
 <div>
     <div class="item-view-header">
-        <span box-breadcrumbs item="folder"></span>
+    <span box-breadcrumbs item="folder"></span>
     </div>
     <span class="folder-view-header-numbers" ng-pluralize count="numFolders"
     when="{'0': '', 'one': '1 Folder, ', 'other': '{} Folders, '}"></span>
@@ -14,4 +14,6 @@
     </div>
     <div class="item-view-footer">
     </div>
+    <span dummy-directive></span>
+
 </div>
