--- a/partials/folder-view.html
+++ b/partials/folder-view.html
@@ -1,8 +1,9 @@
 <div>
     <div class="item-view-header">
-    <span box-breadcrumbs item="folder"></span>
+    <i class="fa fa-folder-open"></i><span box-breadcrumbs item="folder"></span>
     <i class="fa fa-bars"></i>
     </div>
+    <i class="fa fa-share-square-o"></i>
     <span box-user-info></span>
     <span class="folder-view-header-numbers" ng-pluralize count="numFolders"
     when="{'0': '', 'one': '1 Folder, ', 'other': '{} Folders, '}"></span>
