--- a/partials/folder-view.html
+++ b/partials/folder-view.html
@@ -1,7 +1,10 @@
 <div>
     <div class="item-view-header">
     <i class="fa fa-folder-open"></i><span box-breadcrumbs item="folder"></span>
-    <i class="fa fa-bars"></i>
+    <i class="fa fa-bars"><ul>
+      <li>Transfers <i class="fa fa-exchange"></i></li>
+      <li>Settings <i class="fa fa-cog"></i></li>
+    </ul></i>
     </div>
     <i class="fa fa-share-square-o"></i>
     <span box-user-info></span>
