--- a/styles/main.css
+++ b/styles/main.css
@@ -29,12 +29,62 @@ body{
     -ms-transition: all 0.30s ease-in-out;
     -o-transition: all 0.30s ease-in-out;
     box-shadow: 
-    3px 3px 10px 1px rgba(0,0,0,.15),
-    inset 3px 3px 10px 1px rgba(0,0,0,.15); 
+    3px 3px 10px 1px rgba(0,0,0,.10),
+    inset 3px 3px 10px 1px rgba(0,0,0,.10); 
 }
 .fa-bars{
+    vertical-align: bottom;
+    margin-right: 1.25em;
+    margin-top: 0.1em;
     cursor: pointer;
     float: right;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+     -ms-transition: all 0.2s;
+     -o-transition: all 0.2s;
+     transition: all 0.2s;
+}
+.fa-bars:hover {
+  color: rgba(0,0,0,.9);
+    text-shadow: 0 0 0.5px rgba(255,255,255,0.1);
+    cursor: pointer;
+    box-shadow: 
+    0px 0px 5px 1px rgba(0,0,0,.03),
+    inset 0px 0px 5px 1px rgba(0,0,0,.03); 
+}
+.fa-bars ul {
+  text-align: right; 
+  padding: 0;
+  position: absolute;
+  top: 15px;
+  left: -135px;
+  width: 150px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transiton: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  -transition: opacity 0.2s;
+}
+.fa-bars ul li { 
+    padding: 0.2em;
+    line-height: 25px;
+  background: rgba(0,0,0,0.5); 
+  display: block; 
+  color: #fff;
+}
+.fa-bars ul li:hover { 
+    background: #666;
+}
+.fa-bars:hover ul {
+  display: block;
+  opacity: 1;
+  visibility: visible;
 }
 .fa-folder-open{
     margin-right: 0.5em;
@@ -43,18 +93,25 @@ body{
     text-align: center;
     cursor: pointer;
     padding: .6em .6em;
-    margin: 1.25em 0.5em 1em 0;
-    color: rgba(0,0,0,0.4);
-    border: 1px solid rgba(0,0,0,0.075);
+    margin: 1.25em 0.5em 1.25em 0;
+    color: rgba(0,0,0,0.3);
+    border-left: 1px solid rgba(0,0,0,0.075);
     position: relative;
     border-radius: 50%; 
     display: inline-block;
     float: right;
-    font-size: 20pt;
-        -webkit-transition: all 0.30s ease-in-out;
+    font-size: 18pt;
+    -webkit-transition: all 0.30s ease-in-out;
     -moz-transition: all 0.30s ease-in-out;
     -ms-transition: all 0.30s ease-in-out;
     -o-transition: all 0.30s ease-in-out;
+}
+.fa-share-square-o:hover{
+    border-left: 1px solid rgba(0,0,0,0.095);
+    color: rgba(0,0,0,0.4);
+    box-shadow: 
+    3px 3px 10px 1px rgba(0,0,0,.015),
+    inset 3px 3px 10px 1px rgba(0,0,0,.015);
 }
 .user-image:hover{
     box-shadow: 
@@ -62,9 +119,9 @@ body{
     inset 0px 0px 10px 1px rgba(0,0,0,.3); 
 }
 .user-name{
-    text-shadow: 0 0 0.5px rgba(255,255,255,0.1);
+    /*text-shadow: 2px 3px 3px rgba(255,255,255,0.05);*/
     vertical-align: middle;
-    color: rgba(0,0,0,.9);
+    color: rgba(0,0,0,.75);
     font-size: 20pt;
 }
 .folder-view-header-numbers{
@@ -106,7 +163,7 @@ body{
 }
 
 .box-item {
-    padding: 1em;
+    padding: 1.5em;
     border-top: 1px solid rgba(1,1,1,0.1);
     -webkit-transition: all 0.10s ease-in-out;
     -moz-transition: all 0.10s ease-in-out;
@@ -124,6 +181,11 @@ body{
     display: block;
     padding: 0.2em;
     font-weight: bold;
+}
+
+.box-item-body-size, .box-item-body-date {
+    color: rgba(0,0,0,0.5);
+    font-size: 10pt;
 }
 
 .box-item-body-size, .box-item-body-name {
@@ -168,6 +230,17 @@ body{
     text-align: center;
 }
 
+.filedrag:hover:before {
+        color: rgba(0,0,0,0.09);
+        position:absolute;
+        font-size: 65px;
+        font-family: FontAwesome;
+        top:70px;
+        margin-left: -30px; 
+        left: 50%;
+        content: '\f115'; <--- this is your text. You can also use UTF-8 character codes as I do here
+    }
+
 .filedrag {
 	font-weight: bold;
 	text-align: center;
@@ -186,8 +259,7 @@ body{
 }
 
 .filedrag:hover {
-    background: url(../img/arrow.png);
-    background-size: cover; 
+    /*innerHTML: '';*/
     border: 2px dashed rgba(0,0,0,0.2);
 	color: rgba(0,0,0,0.6);
 	border-color: rgba(0,0,0,0.4);
@@ -196,8 +268,6 @@ body{
     inset 0px 0px 25px 1px rgba(0,0,0,.05); 
 }
 .filedrag .hover {
-    background: url(../img/arrow.png);
-    background-size: cover; 
     border: 2px dashed rgba(0,0,0,0.2);
     color: rgba(0,0,0,0.6);
     border-color: rgba(0,0,0,0.4);
