--- a/partials/folder-view.html
+++ b/partials/folder-view.html
@@ -6,7 +6,10 @@
       <li>Settings <i class="fa fa-cog"></i></li>
     </ul></i>
     </div>
-    <i class="fa fa-share-square-o"></i>
+    <div class="btn-group">
+     <button type="button" class="btn btn-primary"><i class="fa fa-user-plus"></i></button>
+     <button type="button" class="btn btn-primary"><i class="fa fa-share-square-o"></i></button>
+     </div>
     <span box-user-info></span>
     <span class="folder-view-header-numbers" ng-pluralize count="numFolders"
     when="{'0': '', 'one': '1 Folder, ', 'other': '{} Folders, '}"></span>
