--- a/partials/drop-target.html
+++ b/partials/drop-target.html
@@ -1,3 +1,3 @@
 <div>
-    <div class="filedrag">{{dropTargetTitle}}</div>
+    <div class="filedrag">{{dropTargetTitle}}<div class="ttip">Drop Files Here to Create a Folder to stage for delivery to another user.</div></div>
 </div>
