--- a/partials/folder-view.html
+++ b/partials/folder-view.html
@@ -7,8 +7,8 @@
     </ul></i>
     </div>
     <div class="btn-group">
-     <button type="button" class="btn btn-primary"><i class="fa fa-user-plus"></i></button>
-     <button type="button" class="btn btn-primary"><i class="fa fa-share-square-o"></i></button>
+     <button type="button" class="btn btn-primary"><i class="fa fa-user-plus"></i><div class="ttip">Brings up form to add a destination user for transfer. Seach by email.</div></button>
+     <button type="button" class="btn btn-primary"><i class="fa fa-share-square-o"></i><div class="ttip">Send staged folder to user. User will recieve a notification on Transfers page.</div></button>
      </div>
     <span box-user-info></span>
     <span class="folder-view-header-numbers" ng-pluralize count="numFolders"
