--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@ body{
     color: #FFFFF8;
     font-family: 'Contrail One', cursive;
     margin-bottom: 2px;
-} 
+}
 .user-image{
     /*display: block;*/
     margin: 2.4em 1em;
@@ -28,9 +28,9 @@ body{
     -moz-transition: all 0.30s ease-in-out;
     -ms-transition: all 0.30s ease-in-out;
     -o-transition: all 0.30s ease-in-out;
-    box-shadow: 
+    box-shadow:
     3px 3px 10px 1px rgba(0,0,0,.10),
-    inset 3px 3px 10px 1px rgba(0,0,0,.10); 
+    inset 3px 3px 10px 1px rgba(0,0,0,.10);
 }
 .fa-bars{
     vertical-align: bottom;
@@ -48,12 +48,12 @@ body{
   color: rgba(0,0,0,.9);
     text-shadow: 0 0 0.5px rgba(255,255,255,0.1);
     cursor: pointer;
-    box-shadow: 
+    box-shadow:
     0px 0px 5px 1px rgba(0,0,0,.03),
-    inset 0px 0px 5px 1px rgba(0,0,0,.03); 
+    inset 0px 0px 5px 1px rgba(0,0,0,.03);
 }
 .fa-bars ul {
-  text-align: right; 
+  text-align: right;
   padding: 0;
   position: absolute;
   top: 15px;
@@ -71,14 +71,14 @@ body{
   -o-transition: opacity 0.2s;
   -transition: opacity 0.2s;
 }
-.fa-bars ul li { 
+.fa-bars ul li {
     padding: 0.2em;
     line-height: 25px;
-  background: rgba(0,0,0,0.5); 
-  display: block; 
+  background: rgba(0,0,0,0.5);
+  display: block;
   color: #fff;
 }
-.fa-bars ul li:hover { 
+.fa-bars ul li:hover {
     background: #666;
 }
 .fa-bars:hover ul {
@@ -93,7 +93,7 @@ body{
     text-align: center;
     cursor: pointer;
     padding: .6em .6em;
-    margin: 1.25em 0.5em 1.25em 0;
+    margin: 1em 0.5em 1.25em 0;
     color: rgba(0,0,0,0.75);
     position: relative;
     display: inline-block;
@@ -103,21 +103,23 @@ body{
     -moz-transition: all 0.30s ease-in-out;
     -ms-transition: all 0.30s ease-in-out;
     -o-transition: all 0.30s ease-in-out;
+    transition: all 0.30s ease-in-out;
 }
 .btn-primary:hover{
     background-color: transparent;
     color: rgba(0,0,0,0.4);
     border-color: rgba(0, 0, 0,0.075);
-    box-shadow: 
+    box-shadow:
     3px 3px 10px 1px rgba(0,0,0,.015),
     inset 3px 3px 10px 1px rgba(0,0,0,.015);
 }
-.btn-primary{
+.btn-primary, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
     font-size: 13pt;
     color: rgba(0, 0, 0,0.6);
     background-color: transparent;
     border-color: rgba(0, 0, 0,0.075);
 }
+
 
 .btn-primary .ttip{
 
@@ -126,29 +128,28 @@ body{
     visibility: hidden;
     text-align: right;
      padding:14px 20px;
-     margin-top: 48px;
-     margin-left: -150px; 
+     margin-top: 20px;
+     margin-left: -150px;
      max-width:300px; line-height:16px;
+   -webkit-transition: all 0.30s ease-in-out;
+    -moz-transition: all 0.30s ease-in-out;
+    -ms-transition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;
+    transition: all 0.30s ease-in-out;
 }
 .btn-primary:hover .ttip{
-    z-index:10;
-    transition-delay: 1s;
     visibility: visible;
-    display: block; 
+    display: block;
     position:absolute;
     color:#111;
 /*    border:1px solid #DCA;
-*/  
+*/
     line-height:20px;
     background:#fffAF0;
     border-radius: 4px;
-    -webkit-transition-delay:1s;     
-    -moz-transition-delay:1s; 
-    -ms-transition-delay:1s;     
-    -o-transition-delay:1s;     
-    transition-delay:1s;
  }
 .btn-primary:hover .ttip:after{
+    background:rgba(255,250,240,1);
     content: ' ';
     position: absolute;
     width: 0;
@@ -157,9 +158,11 @@ body{
     left: 140px;
     top: -12px;
     border: 12px solid;
-    box-shadow: 
-    inset 0px 1px 1px 1px rgba(0,0,0,0.5);
-    0px 5px 1px 5px rgba(0,0,0,0.9);
+    box-shadow:
+    inset 0px 1px 1px 10px rgba(0,0,0,0.9),
+    -9px -6px 10px 2px rgba(0,0,0,0.035);
+    z-index:-1;
+
     border-color: #fffAF0 transparent transparent #fffAF0;
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
@@ -168,9 +171,9 @@ body{
     transform: rotate(45deg);
 }
 .user-image:hover{
-    box-shadow: 
+    box-shadow:
     0px 0px 10px 1px rgba(0,0,0,.3),
-    inset 0px 0px 10px 1px rgba(0,0,0,.3); 
+    inset 0px 0px 10px 1px rgba(0,0,0,.3);
 }
 .user-name{
     /*text-shadow: 2px 3px 3px rgba(255,255,255,0.05);*/
@@ -181,7 +184,7 @@ body{
 .folder-view-header-numbers{
     color: rgba(0,0,0,0.2);
     /*font-size: 13pt;*/
-}     
+}
 .directoryMarker {
     /*color: rgba(0,0,0,.1)*/
     text-shadow: 0 0 0.5px rgba(255,255,255,0.1);
@@ -228,7 +231,7 @@ body{
     border-top: 1px solid rgba(1,1,1,0.1);
 }
 .box-item:hover {
-    box-shadow: inset 0px 0px 7px 1px rgba(248,248,248,1); 
+    box-shadow: inset 0px 0px 7px 1px rgba(248,248,248,1);
 }
 
 .box-item-body-title {
@@ -260,9 +263,9 @@ body{
     color: rgba(0,0,0,.9);
     text-shadow: 0 0 0.5px rgba(255,255,255,0.1);
     cursor: pointer;
-    box-shadow: 
+    box-shadow:
     0px 0px 5px 1px rgba(0,0,0,.03),
-    inset 0px 0px 5px 1px rgba(0,0,0,.03); 
+    inset 0px 0px 5px 1px rgba(0,0,0,.03);
 }
 .box-file-info {
     text-align: center;
@@ -290,7 +293,7 @@ body{
         font-size: 65px;
         font-family: FontAwesome;
         top:70px;
-        margin-left: -30px; 
+        margin-left: -30px;
         left: 50%;
         content: '\f115'; <--- this is your text. You can also use UTF-8 character codes as I do here
     }
@@ -314,32 +317,32 @@ body{
 }
 
 .filedrag .ttip{
-      text-align: center; 
-font-size: 13pt;
-color: rgba(0, 0, 0, 0.6);
+      text-align: center;
+      font-size: 13pt;
+    color: rgba(0, 0, 0, 0.6);
     display: none;
     visibility: hidden;
     font-weight: normal;
     white-space: normal;
      padding:14px 20px;
-     margin-top: 48px;
-     margin-left: -150px; 
+     margin-top: 38px;
+     margin-left: -150px;
      max-width:300px; line-height:20px;
 }
 .filedrag:hover .ttip{
     z-index:10;
     transition-delay: 1s;
     visibility: visible;
-    display:inline; 
+    display:inline;
     position:absolute;
     color:#111;
 /*    border:1px solid #DCA;
 */    background:#fffAF0;
     border-radius: 4px;
-    -webkit-transition-delay:1s;     
-    -moz-transition-delay:1s; 
-    -ms-transition-delay:1s;     
-    -o-transition-delay:1s;     
+    -webkit-transition-delay:1s;
+    -moz-transition-delay:1s;
+    -ms-transition-delay:1s;
+    -o-transition-delay:1s;
     transition-delay:1s;
  }
 .filedrag:hover .ttip:after{
@@ -351,7 +354,7 @@ color: rgba(0, 0, 0, 0.6);
     left: 100px;
     top: -12px;
     border: 12px solid;
-    box-shadow: 
+    box-shadow:
     inset 0px 1px 1px 1px rgba(0,0,0,0.5);
     0px 5px 1px 5px rgba(0,0,0,0.9);
     border-color: #fffAF0 transparent transparent #fffAF0;
@@ -367,15 +370,15 @@ color: rgba(0, 0, 0, 0.6);
     border: 2px dashed rgba(0,0,0,0.2);
 	color: rgba(0,0,0,0.6);
 	border-color: rgba(0,0,0,0.4);
-    box-shadow: 
+    box-shadow:
     0px 0px 25px 1px rgba(0,0,0,.05),
-    inset 0px 0px 25px 1px rgba(0,0,0,.05); 
+    inset 0px 0px 25px 1px rgba(0,0,0,.05);
 }
 .filedrag .hover {
     border: 2px dashed rgba(0,0,0,0.2);
     color: rgba(0,0,0,0.6);
     border-color: rgba(0,0,0,0.4);
-    box-shadow: 
+    box-shadow:
     0px 0px 25px 1px rgba(0,0,0,.05),
-    inset 0px 0px 25px 1px rgba(0,0,0,.05); 
+    inset 0px 0px 25px 1px rgba(0,0,0,.05);
 }
